--- a/intelligence/src/main/resources/templates/errorpage/403.html
+++ b/intelligence/src/main/resources/templates/errorpage/403.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8" />
-    <title>未授权</title>
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <title>多情报资源-未授权</title>
+
+    <link rel="shortcut icon" href="favicon.ico">
+    <link href="/static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="/static/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+
+    <link href="/static/css/animate.css" rel="stylesheet">
+    <link href="/static/css/style.css?v=4.1.0" rel="stylesheet">
+
 </head>
-<body>
-<h1>未授权</h1>
+
+<body class="gray-bg">
+
+
+<div class="middle-box text-center animated fadeInDown">
+    <h1>403</h1>
+    <h3 class="font-bold">未授权错误</h3>
+
+    <div class="error-desc">
+       您好像没有权限访问该页面...
+        <br/>您可以返回主页看看或重新登录其他账号
+        <br/><a href="/index" class="btn btn-primary m-t">主页</a> <a href="/logout" class="btn btn-primary m-t">登录</a>
+    </div>
+</div>
+
+
+
 </body>
+
 </html>
