--- a/intelligence/src/main/resources/templates/errorpage/error.html
+++ b/intelligence/src/main/resources/templates/errorpage/error.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8" />
-    <title>系统故障</title>
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <title>多情报资源-500错误</title>
+
+    <link rel="shortcut icon" href="favicon.ico">
+    <link href="/static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="/static/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+
+    <link href="/static/css/animate.css" rel="stylesheet">
+    <link href="/static/css/style.css?v=4.1.0" rel="stylesheet">
+
 </head>
-<body>
-<h1>系统故障, 请联系管理员</h1>
-<div th:text="${path}"></div>
-<div th:text="${message}"></div>
+
+<body class="gray-bg">
+
+
+<div class="middle-box text-center animated fadeInDown">
+    <h1>500</h1>
+    <h3 class="font-bold">服务器内部错误</h3>
+
+    <div class="error-desc">
+        服务器好像出错了...
+        <br/>您可以返回主页看看
+        <br/><a href="/index" class="btn btn-primary m-t">主页</a>
+    </div>
+</div>
+
+
 
 </body>
+
 </html>
