--- a/intelligence/src/main/resources/templates/errorpage/403.html
+++ b/intelligence/src/main/resources/templates/errorpage/403.html
@@ -28,7 +28,7 @@
     <div class="error-desc">
        您好像没有权限访问该页面...
         <br/>您可以返回主页看看或重新登录其他账号
-        <br/><a href="/index" class="btn btn-primary m-t">主页</a> <a href="/logout" class="btn btn-primary m-t">登录</a>
+        <br/><a href="javascript:history.back(-1)" class="btn btn-primary m-t">返回上一步</a>  <a href="/logout" class="btn btn-primary m-t">登录</a>
     </div>
 </div>
 
