--- a/intelligence/src/main/resources/templates/errorpage/403.html
+++ b/intelligence/src/main/resources/templates/errorpage/403.html
@@ -22,8 +22,7 @@
 
 
 <div class="middle-box text-center animated fadeInDown">
-    <h1>403</h1>
-    <h3 class="font-bold">未授权错误</h3>
+    <h1>访问限制</h1>
 
     <div class="error-desc">
        您好像没有权限访问该页面...
