--- a/intelligence/src/main/resources/static/system/css/main.css
+++ b/intelligence/src/main/resources/static/system/css/main.css
@@ -4779,7 +4779,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   justify-content: space-around;
 
 }
-.fixed-header li{
+.fixed-header > *{
   flex: 1;
   line-height: 22px;
   cursor: pointer;
